--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h2>ClearScore</h2>
 <p>
     <a href="https://play.google.com/store/apps/details?id=com.clearscore.mobile" target="_blank"><img src="images/clearscore.png" alt="ClearScore" class="app-icon"></a>
-    I've been employed as a Senior Android Engineer at <a href="https://www.clearscore.com/" target="_blank">ClearScore</a> since January 2021. I have driven numerous tech initiatives such as migrating the Design Components to Jetpack Compose as well as building the Home screen using Jetpack Compose (initially, hidden behind a feature flag) while the framework was in alpha. ClearScore's vision is to help everyone, no matter what their circumstances, achieve greater financial well-being. ClearScore started this journey by giving everybody access to their credit score and report for free, forever.
+    I've been employed as a Senior Android Engineer at <a href="https://www.clearscore.com/" target="_blank">ClearScore</a> since January 2021. I have driven numerous tech initiatives, such as migrating the Design Components to Jetpack Compose as well as building the Home screen using Jetpack Compose (initially, hidden behind a feature flag) while the framework was in alpha. ClearScore's vision is to help everyone, no matter what their circumstances, achieve greater financial well-being. ClearScore started this journey by giving everybody access to their credit score and report for free, forever.
 </p>
 <h2>Takealot.com</h2>
 <p>
